src/test/ui/parser/keyword-struct-as-identifier.stderr
error: expected identifier, found keyword `struct`
  --> $DIR/keyword-struct-as-identifier.rs:4:9
   |
LL |     let struct = "foo";
   |         ^^^^^^ expected identifier, found keyword
help: you can escape reserved keywords to use them as identifiers
   |
LL |     let r#struct = "foo";
   |         ^^^^^^^^

error: aborting due to previous error

